--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "body-parser": "^1.19.0",
     "emotion": "^10.0.27",
+    "express": "^4.17.1",
+    "express-ws": "^4.0.0",
     "fecha": "3.0.0",
+    "morgan": "^1.9.1",
+    "quiq-socket": "0.0.7",
     "react": "^16.13.0",
     "react-countup": "4.2.0",
     "react-dom": "^16.13.0",
