Removed Font Awesome Token

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 @fortawesome:registry=https://npm.fontawesome.com/
-//npm.fontawesome.com/:_authToken=86F1A0BB-E05D-4907-ADED-EC209E3B5185
+//npm.fontawesome.com/:_authToken=
