--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "dependencies": {
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
+    "@fortawesome/fontawesome-free": "^5.13.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -13,9 +17,6 @@
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
     "@types/styled-system": "^5.1.9",
-    "@fortawesome/fontawesome-svg-core": "1.2.17",
-    "@fortawesome/pro-solid-svg-icons": "5.8.1",
-    "@fortawesome/react-fontawesome": "0.1.4",
     "body-parser": "^1.19.0",
     "emotion": "^10.0.27",
     "express": "^4.17.1",
