--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "workload-summary",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
     "@emotion/core": "^10.0.28",
@@ -27,7 +27,7 @@
     "react": "^16.13.0",
     "react-countup": "4.2.0",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0",
+    "react-scripts": "4.0.3",
     "styled-system": "^5.1.5",
     "typescript": "^3.8.3"
   },
@@ -51,5 +51,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "resolutions": {
+    "ssri": "8.0.1",
+    "is-svg": "4.3.1",
+    "lodash": "4.17.21",
+    "serialize-javascript": "5.0.1"
   }
 }
